Replace .collect() with toList()